# Breez-SDK-Workshop

./: Cargo.toml  replit.nix
.tutorial/: 00-introduction.md  01-prerequisites.md  02-getting-started.md  03-create-a-node.md  04-initialize-sdk.md  05-receive-payment.md  06-send-payment.md  07-SPOILER.md  09-BONUS-http-402.md
src/: main.rs
