[package]
name = "breez-sdk-workshop-rust-replit"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
bip39 = { version = "*", features = ["rand"] }
breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.1.1" }
once_cell = "*"
tokio = "*"
dotenv = "*"
reqwest = "*"
regex = "*"
